2006-01-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/jpeg.c: applied a patch from Mukund that fixes
	handling of EXIF data when preview is enabled (bug #303383).

2006-01-05  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* tools/pdbgen/pdb/brush.pdb (gimp-brush-set-spacing): allow to
	change the spacing of brushes the user doesn't have write access
	to. The user interface allows to do that as well.

	* app/pdb/brush_cmds.c: regenerated.

2006-01-05  Stanislav Brabec  <sbrabec@suse.cz>

	* app/base/pixel-processor.c: Added missing string.h include.

2005-12-27  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.2.11, interface_age 11.

2005-12-27  Sven Neumann  <sven@gimp.org>

	* Made 2.2.10 GIMP Anniversary Release.

2005-12-27  Sven Neumann  <sven@gimp.org>

	* data/images/gimp-splash.png: anniversary splash screen "Dialed In",
	a contest submission by ix(at)hydrophilus.com.

2005-12-27  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/unsharp.c (query): fixed type of threshold
	parameter (bug #325007).

2005-12-19  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/svg.c: fixed handling of librsvg API change,
	based on a patch by S. Mukund (bug #314400).

2005-12-12  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/script-fu/siod/slib.c: added a fix for the script-fu
	crash in chinese (and maybe other) locales. Applied to both
	branches. Fixes bug #163212. 

2005-12-11  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* app/core/gimpstrokedesc.c (gimp_stroke_desc_new): fall back to
	the paintbrush if we can't get the paint method from the active
	tool (because there is no active tool). Fixes bug #323778.

2005-12-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/url.c (load_image): : added "-v" to the wget
	command-line options. Fixes bug #322977.

2005-11-16  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:
