@@ -1,5 +1,10 @@
 2006-01-06  Sven Neumann  <sven@gimp.org>
 
+	* gimptool-2.0.in: if available use pkg-config to determine
+	compiler and linker flags at runtime. Fixes bug #324761.
+
+2006-01-06  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/jpeg.c: applied a patch from Mukund that fixes
 	handling of EXIF data when preview is enabled (bug #303383).
 
